--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,9 @@
 
     <h1 class="header">Soy Hylia Hale, influencer y streamer en Twitch.</h1>
     <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elit rutrum ut cras natoque proin nunc, lobortis massa. Amet sed pharetra semper bibendum nisl. Feugiat molestie egestas.</p>
+
+    <button class="btn-drop">Sígueme</button>
+
+    <img src="./img/foto1.jpg" alt="Foto de Hylia Hale" class="photo">
 </body>
 </html>
