Moved index file

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css" >
+    <link rel="stylesheet" href="public/css/style.css" >
 </head>
 <body>
-    <img src="./img/hyliahale_logo.svg" alt="Hylia Hale Logo" class="logo">
+    <img src="public/img/hyliahale_logo.svg" alt="Hylia Hale Logo" class="logo">
 
     <h1 class="header">Soy Hylia Hale, influencer y streamer en Twitch.</h1>
     <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elit rutrum ut cras natoque proin nunc, lobortis massa. Amet sed pharetra semper bibendum nisl. Feugiat molestie egestas.</p>
 
     <button class="btn-drop">Sígueme</button>
 
-    <img src="./img/foto1.jpg" alt="Foto de Hylia Hale" class="photo">
+    <img src="public/img/foto1.jpg" alt="Foto de Hylia Hale" class="photo">
 </body>
 </html>
